--- a/style.css
+++ b/style.css
@@ -27,6 +27,15 @@ body {
   opacity: 1;
 }
 
+.section .container {
+  padding-top: 60px;
+  padding-bottom: 70px;
+}
+
+.hidden {
+  display: none !important;
+}
+
 .aside {
   width: 270px;
   background: #fdf9ff;
@@ -171,21 +180,13 @@ body {
   padding-left: 270px;
 }
 
-.main-content .home {
-  min-height: 100vh;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  color: #302e4d;
-}
-
-.main-content .home .container {
+.main-content .container {
   max-width: 1100px;
   width: 100%;
   margin: auto;
 }
 
-.main-content .home .container .row {
+.main-content .container .row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -196,46 +197,54 @@ body {
   position: relative;
 }
 
-.main-content .home .container .row .pad-15 {
+.main-content .container .row .pad-15 {
   padding-left: 15px;
   padding-right: 15px;
 }
 
-.main-content .home .container .row .home-info {
+.main-content .home {
+  min-height: 100vh;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  color: #302e4d;
+}
+
+.main-content .home .home-info {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 60%;
           flex: 0 0 60%;
   max-width: 60%;
 }
 
-.main-content .home .container .row .home-info .hi {
+.main-content .home .home-info .hi {
   font-size: 28px;
   margin: 15px 0;
 }
 
-.main-content .home .container .row .home-info .hi span {
+.main-content .home .home-info .hi span {
   font-family: "Clicker Script" cursive;
   font-size: 30px;
   font-weight: 700;
   color: #ec1839;
 }
 
-.main-content .home .container .row .home-info .my-profession {
+.main-content .home .home-info .my-profession {
   font-size: 30px;
   margin: 15px 0;
 }
 
-.main-content .home .container .row .home-info .my-profession .typing {
+.main-content .home .home-info .my-profession .typing {
   color: #ec1839;
 }
 
-.main-content .home .container .row .home-info p {
+.main-content .home .home-info p {
   margin-bottom: 70px;
   font-size: 20px;
   color: #302e4d;
 }
 
-.main-content .home .container .row .home-info .btn {
+.main-content .home .home-info .btn {
   font-size: 16px;
   font-weight: 500;
   padding: 12px 35px;
@@ -249,12 +258,12 @@ body {
   border: none;
 }
 
-.main-content .home .container .row .home-info .btn:hover {
+.main-content .home .home-info .btn:hover {
   -webkit-transform: scale(1.05);
           transform: scale(1.05);
 }
 
-.main-content .home .container .row .home-img {
+.main-content .home .home-img {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 40%;
           flex: 0 0 40%;
@@ -263,13 +272,13 @@ body {
   position: relative;
 }
 
-.main-content .home .container .row .home-img img {
-  height: 300px;
+.main-content .home .home-img img {
+  height: 400px;
   margin: auto;
   border-radius: 10px;
 }
 
-.main-content .home .container .row .home-img::after {
+.main-content .home .home-img::after {
   content: '';
   position: absolute;
   height: 80px;
@@ -280,7 +289,7 @@ body {
   border-right: 10px solid #ec1839;
 }
 
-.main-content .home .container .row .home-img::before {
+.main-content .home .home-img::before {
   content: '';
   position: absolute;
   height: 80px;
@@ -289,5 +298,70 @@ body {
   top: -40px;
   border-top: 10px solid #ec1839;
   border-left: 10px solid #ec1839;
+}
+
+.main-content .aboutMe .section-title {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+  max-width: 100%;
+  margin-bottom: 60px;
+}
+
+.main-content .aboutMe .section-title h2 {
+  font-size: 40px;
+  color: #302e4d;
+  font-weight: 700;
+  position: relative;
+}
+
+.main-content .aboutMe .section-title h2::before {
+  content: '';
+  height: 4px;
+  width: 50px;
+  background-color: #ec1839;
+  position: absolute;
+  top: 100%;
+  left: 0;
+}
+
+.main-content .aboutMe .section-title h2::after {
+  content: '';
+  height: 4px;
+  width: 25px;
+  background-color: #ec1839;
+  position: absolute;
+  top: 100%;
+  left: 0;
+  margin-top: 8px;
+}
+
+.main-content .aboutMe .about-info {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+  max-width: 100%;
+}
+
+.main-content .aboutMe .about-info .about-text {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+  max-width: 100%;
+}
+
+.main-content .aboutMe .about-info .about-text h3 {
+  font-size: 24px;
+  margin-bottom: 15px;
+  font-weight: 700;
+  color: #302e4d;
+}
+
+.main-content .aboutMe .about-info .about-text h3 span {
+  color: #ec1839;
+}
+
+.main-content .aboutMe .about-info .about-text p {
+  font-size: 16px;
 }
 /*# sourceMappingURL=style.css.map */
