--- a/style.scss
+++ b/style.scss
@@ -5,6 +5,7 @@ $bg-black-900: #f2f2fc;
 $bg-black-100: #fdf9ff;
 $bg-black-50: #c8dfec;
 $text-black-900: #302e4d;
+// $bg-text-700: ;
 $text-black-200: #504e70;
 $font-family1: Poppins 'san serif';
 $font-family2: 'Clicker Script' cursive;
@@ -36,6 +37,15 @@ body {
   padding: 0 30px;
   opacity: 1;
 }
+
+.section .container {
+  padding-top: 60px;
+  padding-bottom: 70px;
+}
+
+// .hidden {
+//   display: none !important;
+// }
 
 .aside {
   width: 270px;
@@ -179,27 +189,29 @@ body {
 .main-content {
   padding-left: 270px;
 
+  .container {
+    max-width: 1100px;
+    width: 100%;
+    margin: auto;
+    
+    .row {
+      display: flex;
+      flex-wrap: wrap;
+      margin-left: -15px;
+      margin-right: -15px;
+      position: relative;
+
+      .pad-15{
+        padding-left: 15px;
+        padding-right: 15px;
+      }
+    }
+  }
+
   .home {
     min-height: 100vh;
     display: flex;
     color: $text-black-900;    
-
-    .container {
-      max-width: 1100px;
-      width: 100%;
-      margin: auto;
-      
-      .row {
-        display: flex;
-        flex-wrap: wrap;
-        margin-left: -15px;
-        margin-right: -15px;
-        position: relative;
-
-        .pad-15{
-          padding-left: 15px;
-          padding-right: 15px;
-        }
 
         .home-info {
           flex: 0 0 60%;
@@ -227,10 +239,9 @@ body {
           }
 
           p {
-
             margin-bottom: 70px;
             font-size: 20px;
-            color: $text-black-900;
+            color: $text-black-700;
           }
 
           .btn {
@@ -258,7 +269,7 @@ body {
           position: relative;
 
           img {
-            height: 300px;
+            height: 400px;
             margin: auto;
             border-radius: 10px;
           }
@@ -287,8 +298,68 @@ body {
         }
       }
 
+  .aboutMe{
+
+    .section-title {
+      flex: 0 0 100%;
+      max-width: 100%;
+      margin-bottom: 60px;
+
+      h2 {
+        font-size: 40px;
+        color: $text-black-900;
+        font-weight: 700;
+        position: relative;
+      }
+
+      h2::before {
+        content: '';
+        height: 4px;
+        width: 50px;
+        background-color: $skin-color;
+        position: absolute;
+        top: 100%;
+        left: 0;
+      }
+
+      h2::after {
+        content: '';
+        height: 4px;
+        width: 25px;
+        background-color: $skin-color;
+        position: absolute;
+        top: 100%;
+        left: 0;
+        margin-top: 8px;
+      }
+
+    }
+
+    .about-info {
+      flex: 0 0 100%;
+      max-width: 100%;
+      
+      .about-text {
+        flex: 0 0 100%;
+        max-width: 100%;
+
+        h3 {
+          font-size: 24px;
+          margin-bottom: 15px;
+          font-weight: 700;
+          color: $text-black-900;
+
+          span {
+            color: $skin-color;
+          }
+        }
+
+        p{
+          font-size: 16px;
+          line-height: 25px;
+          color: $bg-text-700;
+        }
+      }
     }
   }
-
-
 }
