--- a/style.scss
+++ b/style.scss
@@ -1,17 +1,19 @@
-@import url('https://googleapis.com/css2?family=clicker+Script&family=Poppins:wgh@200;300;400;500;600;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600;700&display=swap');
 
 
 $bg-black-900: #f2f2fc;
 $bg-black-100: #fdf9ff;
 $bg-black-50: #c8dfec;
 $text-black-900: #302e4d;
-$bg-text-700: #504e70;
+$text-black-700: #504e70;
 $text-black-200: #504e70;
-$font-family1: Poppins 'san serif';
-$font-family2: 'Clicker Script' cursive;
+$font-family1: 'Poppins', sans-serif;
+$font-family2: 'Clicker Script', cursive;
 $skin-color:#ec1839;
+$shadow-dark: 0 0 20px rgba(48, 46, 77, 0.15);
 
 
+// GENERAL STYLING
 * {
   margin: 0;
   padding: 0;
@@ -47,6 +49,80 @@ body {
   display: none !important;
 }
 
+.btn {
+  font-size: 16px;
+  font-weight: 500;
+  padding: 12px 35px;
+  background: $skin-color;
+  border-radius: 40px;
+  color: white;
+  display: inline-block;
+  white-space: nowrap;
+  transition: all 0.3s ease;
+  border: none;
+}
+
+.btn:hover {
+  transform: scale(1.05);
+}
+
+.section-title {
+  flex: 0 0 100%;
+  max-width: 100%;
+  margin-bottom: 60px;
+
+  h2 {
+    font-size: 30px;
+    color: $text-black-900;
+    font-weight: 700;
+    position: relative;
+  }
+
+  h2::before {
+    content: '';
+    height: 4px;
+    width: 50px;
+    background-color: $skin-color;
+    position: absolute;
+    top: 100%;
+    left: 0;
+  }
+
+  h2::after {
+    content: '';
+    height: 4px;
+    width: 25px;
+    background-color: $skin-color;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    margin-top: 8px;
+  }
+
+}
+
+.container {
+  max-width: 1100px;
+  width: 100%;
+  margin: auto;
+  
+  .row {
+    display: flex;
+    flex-wrap: wrap;
+    margin-left: -15px;
+    margin-right: -15px;
+    position: relative;
+
+    .pad-15{
+      padding-left: 15px;
+      padding-right: 15px;
+    }
+  }
+}
+
+
+
+// ASIDE AND NAVIGATION STYLING
 .aside {
   width: 270px;
   background: $bg-black-100;
@@ -66,7 +142,6 @@ body {
     position: absolute;
     top: 50px;
     font-size: 30px;
-    // text-transform: capitalize;
 
     a {
       color: $text-black-900;
@@ -74,7 +149,7 @@ body {
       padding: 15px 20px;
       font-size: 30px;
       letter-spacing: 5px;
-      position: relative
+      position: relative;
 
       span {
         font-family: $font-family2;
@@ -155,7 +230,7 @@ body {
   nav {
     margin-top: 50px;
 
-    .list {
+    ul {
       list-style: none;
 
       li {
@@ -189,29 +264,11 @@ body {
 .main-content {
   padding-left: 270px;
 
-  .container {
-    max-width: 1100px;
-    width: 100%;
-    margin: auto;
-    
-    .row {
-      display: flex;
-      flex-wrap: wrap;
-      margin-left: -15px;
-      margin-right: -15px;
-      position: relative;
-
-      .pad-15{
-        padding-left: 15px;
-        padding-right: 15px;
-      }
-    }
-  }
-
+  // HOME SECTION STYLING
   .home {
     min-height: 100vh;
     display: flex;
-    color: $text-black-900;    
+    color: $text-black-900;
 
         .home-info {
           flex: 0 0 60%;
@@ -242,23 +299,6 @@ body {
             margin-bottom: 70px;
             font-size: 20px;
             color: $text-black-700;
-          }
-
-          .btn {
-            font-size: 16px;
-            font-weight: 500;
-            padding: 12px 35px;
-            background: $skin-color;
-            border-radius: 40px;
-            color: white;
-            display: inline-block;
-            white-space: nowrap;
-            transition: all 0.3s ease;
-            border: none;
-          }
-
-          .btn:hover {
-            transform: scale(1.05);
           }
         }
   
@@ -298,42 +338,9 @@ body {
         }
       }
 
+
+  // ABOUT SECTION STYLING
   .aboutMe{
-
-    .section-title {
-      flex: 0 0 100%;
-      max-width: 100%;
-      margin-bottom: 60px;
-
-      h2 {
-        font-size: 40px;
-        color: $text-black-900;
-        font-weight: 700;
-        position: relative;
-      }
-
-      h2::before {
-        content: '';
-        height: 4px;
-        width: 50px;
-        background-color: $skin-color;
-        position: absolute;
-        top: 100%;
-        left: 0;
-      }
-
-      h2::after {
-        content: '';
-        height: 4px;
-        width: 25px;
-        background-color: $skin-color;
-        position: absolute;
-        top: 100%;
-        left: 0;
-        margin-top: 8px;
-      }
-
-    }
 
     .about-info {
       flex: 0 0 100%;
@@ -357,7 +364,7 @@ body {
         p{
           font-size: 16px;
           line-height: 25px;
-          color: $bg-text-700;
+          color: $text-black-700;
         }
 
       }
@@ -365,15 +372,251 @@ body {
       .personal-info {
         flex: 0 0 60%;
         max-width: 60%;
-        background-color: red;
+        margin-top: 40px;
+
+        .info-item{
+          flex: 0 0 50%;
+          max-width: 50%;
+
+          p{
+            font-weight: 600;
+            padding: 10px 0;
+            font-size: 16px;
+            color: $text-black-900;
+            border-bottom: 1px solid $bg-black-50;
+
+            span {
+              font-weight: 400;
+              color: $text-black-700;
+              margin-left: 4px;
+              display: inline-block;
+            }
+          }
+        }
+
+        .buttons {
+          margin-top: 30px;
+
+          .btn{
+            margin-right: 15px;
+            margin-top: 10px;
+          }
+        }
       }
 
       .skills {
         flex: 0 0 40%;
         max-width: 40%;
-        background-color: green;
+        margin-top: 40px;
+
+        .skill-item {
+          flex: 0 0 100%;
+          max-width: 100%;
+          margin-bottom: 20px;
+
+          h5 {
+            line-height: 20px;
+            font-weight: 600;
+            font-size: 14px;
+            color: $text-black-900;
+          }
+
+          .progress {
+            background-color: $bg-black-50;
+            height: 5px;
+            border-radius: 4px;
+            width: 100%;
+            position: relative;
+
+            .progress-in {
+              position: absolute;
+              left: 0;
+              top: 0;
+              height: 100%;
+              border-radius: 4px;
+              background-color: $skin-color;
+            }
+
+            .skill-percent {
+              position: absolute;
+              right: 0;
+              color: $text-black-900;
+              top: -30px;
+              font-weight: 400;
+              line-height: 40px;
+            }
+          }
+        }
+      }
+
+      .education, .experience {
+        flex: 0 0 50%;
+        max-width: 60%;
+        margin-top: 30px;
+
+        h3.title {
+          font-size: 24px;
+          margin-bottom: 30px;
+          font-weight: 700;
+          color: $text-black-900;
+        }
+
+        .timeline-box {
+          flex: 0 0 100%;
+          max-width: 100%;
+
+          .timeline {
+            background-color: $bg-black-100;
+            padding: 30px 15px;
+            border: 1px solid $bg-black-50;
+            border-radius: 10px;
+            width: 100%;
+            position: relative;
+            box-shadow: $shadow-dark;
+
+            .timeline-item {
+              position: relative;
+              padding-left: 37px;
+              padding-bottom: 50px;
+              
+            }
+
+            .timeline-item:before {
+              content: '';
+              width: 1px;
+              position: absolute;
+              height: 100%;
+              left: 7px;
+              top: 0;
+              background-color: $skin-color;
+            }
+
+            .timeline-item:last-child {
+              padding-bottom: 0;
+            }
+
+            .circle-dot {
+              position: absolute;
+              left: 0;
+              top: 0; 
+              height: 15px;
+              width: 15px;
+              border-radius: 50%;
+              background-color: $skin-color;
+
+            }
+
+            .timeline-date {
+              font-weight: 400;
+              font-size: 14px;
+              margin-bottom: 12px;
+              color: $text-black-700;
+
+              .fa {
+                margin-right: 5px;
+              }
+            }
+
+            .timeline-title{
+              font-weight: 700;
+              font-size: 18px;
+              margin-bottom: 15px;
+              text-transform: capitalize;
+              color: $text-black-900;
+            }
+
+            .timeline-text {
+              line-height: 25px;
+              font-size: 16px;
+              text-align: justify;
+              color: $text-black-700;
+            }
+          }
+        }
       }
 
     }
   }
+
+
+  // SERVICES SECTION STYLING
+  .services {
+
+    .container {
+      padding-bottom: 40px;
+
+      .service-item {
+      margin-bottom: 30px;
+      flex: 0 0 33.33%;
+      max-width: 33.33%;
+
+      .services-item-inner {
+        background-color: $bg-black-100;
+        border: 1px solid $bg-black-50;
+        border-radius: 10px;
+        padding: 30px 15px;
+        text-align: center;
+        transition: all 0.35 ease;
+
+        .icon {
+          height: 60px;
+          width: 60px;
+          border-radius: 50%;
+          display: block;
+          margin: 0 auto 30px;
+          text-align: center;
+          transition: all 0.03s ease;
+
+          .fa {
+            font-size: 40px;
+            line-height: 60px;
+            color: $skin-color;
+            transition: all 0.3s ease;
+          }
+        }
+
+        h4 {
+          font-size: 18px;
+          margin-bottom: 15px;
+          color: $text-black-900;
+          font-weight: 700;
+          text-transform: capitalize;
+        }
+
+        p {
+          font-size: 16px;
+          color: $text-black-700;
+          line-height: 25px;
+
+        }
+      }
+
+      .services-item-inner:hover {
+        box-shadow: $shadow-dark;
+        transform: scale(1.05);
+
+        .icon {
+          background-color: $skin-color;
+
+          .fa {
+            font-size: 25px;
+            color: #ffffff;
+          }
+        }
+      }
+
+      }
+      
+   }
+
+  }
+
+
+
+  // PORTFOLIO SECTION
+  
+
+
+
+
 }
