create portfolio, contact sectionand media screens

--- a/style.css
+++ b/style.css
@@ -400,6 +400,14 @@ body {
   display: inline-block;
 }
 
+.main-content .aboutMe .about-info .personal-info .info-item p a {
+  color: #504e70;
+}
+
+.main-content .aboutMe .about-info .personal-info .info-item p a:hover {
+  color: #ec1839;
+}
+
 .main-content .aboutMe .about-info .personal-info .buttons {
   margin-top: 30px;
 }
@@ -616,5 +624,172 @@ body {
 .main-content .services .container .service-item .services-item-inner:hover .icon .fa {
   font-size: 25px;
   color: #ffffff;
+}
+
+.main-content .portfolio .container {
+  padding-bottom: 40px;
+}
+
+.main-content .portfolio .container .portfolio-heading {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+  max-width: 100%;
+  margin-bottom: 40px;
+}
+
+.main-content .portfolio .container .portfolio-heading h2 {
+  color: #302e4d;
+  font-weight: 500;
+}
+
+.main-content .portfolio .container .portfolio-item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 33.33%;
+          flex: 0 0 33.33%;
+  max-width: 33.33%;
+  margin-bottom: 30px;
+}
+
+.main-content .portfolio .container .portfolio-item .portfolio-item-inner {
+  border: 6px solid #fdf9ff;
+  border-radius: 10px;
+  overflow: hidden;
+  cursor: pointer;
+}
+
+.main-content .portfolio .container .portfolio-item .portfolio-item-inner .portfolio-img img {
+  width: 100%;
+  display: block;
+}
+
+.main-content .contact .contact-title {
+  color: #ec1839;
+  text-align: center;
+  font-size: 25px;
+  margin-bottom: 20px;
+}
+
+.main-content .contact .contact-sub-title {
+  color: #302e4d;
+  text-align: center;
+  font-size: 15px;
+  margin-bottom: 60px;
+}
+
+.main-content .contact .contact-info-item {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 25%;
+          flex: 0 0 25%;
+  max-width: 25%;
+  text-align: center;
+  margin-bottom: 60px;
+}
+
+.main-content .contact .contact-info-item .icon {
+  display: inline-block;
+}
+
+.main-content .contact .contact-info-item .icon .fa {
+  font-size: 25px;
+  color: #ec1839;
+}
+
+.main-content .contact .contact-info-item .icon .h4 {
+  font-size: 18px;
+  font-weight: 700;
+  color: #302e4d;
+  text-transform: capitalize;
+  margin: 15px 0 5px;
+}
+
+.main-content .contact .contact-info-item .icon p {
+  font-size: 16px;
+  line-height: 25px;
+  color: #504e70;
+  font-weight: 400;
+}
+
+.main-content .contact .contact-form {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+  max-width: 100%;
+}
+
+.main-content .contact .contact-form .col-6 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 50%;
+          flex: 0 0 50%;
+  max-width: 50%;
+}
+
+.main-content .contact .contact-form .col-12 {
+  -webkit-box-flex: 0;
+      -ms-flex: 0 0 100%;
+          flex: 0 0 100%;
+  max-width: 100%;
+}
+
+.main-content .contact .contact-form .form-item {
+  margin-bottom: 30px;
+}
+
+.main-content .contact .contact-form .form-item .form-control {
+  width: 100%;
+  height: 100%;
+  border-radius: 25px;
+  background: #fdf9ff;
+  border: 1px solid #c8dfec;
+  padding: 10px 25px;
+  font-size: 16px;
+  color: #504e70;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+}
+
+.main-content .contact .contact-form .form-item .form-control:focus {
+  -webkit-box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+          box-shadow: 0 0 20px rgba(48, 46, 77, 0.15);
+}
+
+.main-content .contact .contact-form .form-item textarea.form-control {
+  height: 140px;
+}
+
+.main-content .contact .contact-form .btn {
+  height: 50px;
+  padding: 0 50px;
+}
+
+@media (max-width: 1160px) {
+  .aside {
+    left: -270px;
+  }
+  .main-content {
+    padding-left: 0;
+  }
+  .about .about-info .personal-info .info-item p span {
+    display: block;
+    margin-left: 0;
+  }
+}
+
+@media (max-width: 900px) {
+  .contact .contact-info-item, .portfolio .portfolio-item, .service .service-item {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 50%;
+            flex: 0 0 50%;
+    max-width: 50%;
+  }
+  .home .home-info {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    max-width: 100%;
+  }
+  .home .home-img {
+    display: none;
+  }
 }
 /*# sourceMappingURL=style.css.map */
