--- a/style.scss
+++ b/style.scss
@@ -270,7 +270,7 @@ body {
     display: flex;
     color: $text-black-900;
 
-        .home-info {
+      .home-info {
           flex: 0 0 60%;
           max-width: 60%;
 
@@ -300,9 +300,9 @@ body {
             font-size: 20px;
             color: $text-black-700;
           }
-        }
+      }
   
-        .home-img {
+      .home-img {
           flex: 0 0 40%;
           max-width: 40%;
           text-align: center;
@@ -313,9 +313,9 @@ body {
             margin: auto;
             border-radius: 10px;
           }
-        }
+      }
 
-        .home-img::after {
+      .home-img::after {
           content: '';
           position: absolute;
           height: 80px;
@@ -324,9 +324,9 @@ body {
           bottom: -40px;
           border-bottom: 10px solid $skin-color;
           border-right: 10px solid $skin-color;
-        }
+      }
 
-        .home-img::before {
+      .home-img::before {
           content: '';
           position: absolute;
           height: 80px;
@@ -335,8 +335,8 @@ body {
           top: -40px;
           border-top: 10px solid $skin-color;
           border-left: 10px solid $skin-color;
-        }
       }
+  }
 
 
   // ABOUT SECTION STYLING
@@ -391,6 +391,15 @@ body {
               margin-left: 4px;
               display: inline-block;
             }
+
+            a {
+              color: $text-black-700;
+            }
+
+            a:hover {
+              color: $skin-color;
+            }
+
           }
         }
 
@@ -607,16 +616,190 @@ body {
 
       }
       
-   }
+    }
+
+  }
+
+
+  // PORTFOLIO SECTION
+  .portfolio {
+
+    .container{
+      padding-bottom: 40px;
+
+      .portfolio-heading {
+        flex: 0 0 100%;
+        max-width: 100%;
+        margin-bottom: 40px;
+
+  
+        h2 {
+          color: $text-black-900;
+          font-weight: 500;
+        }
+      }  
+
+      .portfolio-item {
+        flex: 0 0 33.33%;
+        max-width: 33.33%;
+        margin-bottom: 30px;
+        // box-shadow: $shadow-dark;
+
+
+        .portfolio-item-inner {
+          border: 6px solid $bg-black-100;
+          border-radius: 10px;
+          overflow: hidden;
+          cursor: pointer;
+
+          .portfolio-img img {
+            width: 100%;
+            display: block;
+          }
+        }
+      }
+    }
+  }
+
+
+  // CONTACT SECTION
+  .contact {
+
+    .contact-title {
+      color: $skin-color;
+      text-align: center;
+      font-size: 25px;
+      margin-bottom: 20px;
+    }
+
+    .contact-sub-title {
+      color: $text-black-900;
+      text-align: center;
+      font-size: 15px;
+      margin-bottom: 60px;
+    }
+
+    .contact-info-item {
+      flex: 0 0 25%;
+      max-width: 25%;
+      text-align: center;
+      margin-bottom: 60px;
+
+      .icon {
+        display: inline-block;
+
+        .fa {
+          font-size: 25px;
+          color: $skin-color;
+        }
+
+      .h4 {
+        font-size: 18px;
+        font-weight: 700;
+        color: $text-black-900;
+        text-transform: capitalize;
+        margin: 15px 0 5px;
+      }
+
+      p {
+        font-size: 16px;
+        line-height: 25px;
+        color: $text-black-700;
+        font-weight: 400;
+      }
+
+
+      }
+    }
+
+    .contact-form {
+      flex: 0 0 100%;
+      max-width: 100%;
+
+      .col-6 {
+        flex: 0 0 50%;
+        max-width: 50%;
+      }
+
+      .col-12 {
+        flex: 0 0 100%;
+        max-width: 100%;
+      }
+
+      .form-item {
+        margin-bottom: 30px;
+
+        .form-control {
+          width: 100%;
+          height: 100%;
+          border-radius: 25px;
+          background: $bg-black-100;
+          border: 1px solid $bg-black-50;
+          padding: 10px 25px;
+          font-size: 16px;
+          color: $text-black-700;
+          transition: all 0.3s ease;
+        }
+
+        .form-control:focus {
+          box-shadow: $shadow-dark;
+        }
+
+        textarea.form-control {
+          height: 140px;
+        }
+      }
+
+      .btn {
+        height: 50px;
+        padding: 0 50px;
+      }
+    }
 
   }
 
 
 
-  // PORTFOLIO SECTION
-  
+}
 
+// MEDIA SCREENS
+@media (max-width:1160px){
+  .aside {
+    left: -270px;
+  }
 
+  .main-content {
+    padding-left: 0;
+  }
 
+  .about {
+    .about-info {
+      .personal-info {
+        .info-item {
+          p {
+            span {
+              display: block;
+              margin-left: 0;
+            }
+          }
+        }
+      }
+    }
+  }
+}
 
+@media (max-width: 900px) {
+  .contact .contact-info-item, .portfolio .portfolio-item, .service .service-item {
+    flex: 0 0 50%;
+    max-width: 50%;
+  }
+
+  .home .home-info {
+    flex: 0 0 100%;
+    max-width: 100%;
+  }
+
+  .home .home-img {
+    display: none;
+  }
 }
