--- a/style.css
+++ b/style.css
@@ -1,4 +1,100 @@
 @import url("https://fonts.googleapis.com/css2?family=Clicker+Script&family=Poppins:wght@200;300;400;500;600;700&display=swap");
+.style-switcher {
+  z-index: 100;
+  position: fixed;
+  right: 0;
+  top: 60px;
+  padding: 15px;
+  width: 200px;
+  border: 1px solid #c8dfec;
+  background: #fdf9ff;
+  border-radius: 5px;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  -webkit-transform: translateX(100%);
+          transform: translateX(100%);
+}
+
+.style-switcher .s-icon {
+  position: absolute;
+  height: 40px;
+  width: 40px;
+  text-align: center;
+  font-size: 20px;
+  background: #fdf9ff;
+  color: #302e4d;
+  right: 100%;
+  border: 1px solid #fdf9ff;
+  margin-right: 25px;
+  cursor: pointer;
+  -webkit-transition: all 0.3s ease;
+  transition: all 0.3s ease;
+  border-radius: 50%;
+}
+
+.style-switcher .s-icon i {
+  line-height: 40px;
+}
+
+.style-switcher .style-switcher-toggler {
+  top: 0;
+}
+
+.style-switcher .day-night {
+  top: 55px;
+}
+
+.style-switcher h4 {
+  margin: 0 0 10px;
+  color: #504e70;
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: capitalize;
+}
+
+.style-switcher .colors {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+
+.style-switcher .colors span {
+  display: inline-block;
+  height: 30px;
+  width: 30px;
+  border-radius: 50%;
+}
+
+.style-switcher .color1 {
+  background: #ec1839;
+}
+
+.style-switcher .color2 {
+  background: #fa5b0f;
+}
+
+.style-switcher .color3 {
+  background: #37b182;
+}
+
+.style-switcher .color4 {
+  background: #1854b4;
+}
+
+.style-switcher .color5 {
+  background: #f021b2;
+}
+
+.style-switcher.open {
+  -webkit-transform: translateX(-25px);
+          transform: translateX(-25px);
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -30,10 +126,6 @@ body {
 .section .container {
   padding-top: 60px;
   padding-bottom: 70px;
-}
-
-.hidden {
-  display: none !important;
 }
 
 .btn {
@@ -470,7 +562,7 @@ body {
   -webkit-box-flex: 0;
       -ms-flex: 0 0 50%;
           flex: 0 0 50%;
-  max-width: 60%;
+  max-width: 50%;
   margin-top: 30px;
 }
 
@@ -762,34 +854,45 @@ body {
   padding: 0 50px;
 }
 
-@media (max-width: 1160px) {
+@media (max-width: 1199px) {
   .aside {
     left: -270px;
   }
   .main-content {
     padding-left: 0;
   }
-  .about .about-info .personal-info .info-item p span {
+  .aboutMe .about-info .row .personal-info .info-item p span {
     display: block;
     margin-left: 0;
   }
 }
 
-@media (max-width: 900px) {
-  .contact .contact-info-item, .portfolio .portfolio-item, .service .service-item {
+@media (max-width: 991px) {
+  .main-content .contact .row .contact-info-item,
+  .main-content .portfolio .row .portfolio-item,
+  .main-content .services .row .service-item {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 50%;
             flex: 0 0 50%;
     max-width: 50%;
   }
-  .home .home-info {
+  .main-content .home .home-info {
     -webkit-box-flex: 0;
         -ms-flex: 0 0 100%;
             flex: 0 0 100%;
     max-width: 100%;
   }
-  .home .home-img {
+  .main-content .home .home-img {
     display: none;
+  }
+}
+
+@media (max-width: 767px) {
+  .main-content .contact .contact-form .col-6, .main-content .contact .row .contact-info-item, .main-content .portfolio .row .portfolio-item, .main-content .services .row .service-item, .main-content .aboutMe .about-info .row .experience, .main-content .aboutMe .about-info .row .education, .main-content .aboutMe .about-info .row .skills, .main-content .aboutMe .about-info .row .personal-info {
+    -webkit-box-flex: 0;
+        -ms-flex: 0 0 100%;
+            flex: 0 0 100%;
+    max-width: 100%;
   }
 }
 /*# sourceMappingURL=style.css.map */
