--- a/style.scss
+++ b/style.scss
@@ -11,7 +11,121 @@ $font-family1: 'Poppins', sans-serif;
 $font-family2: 'Clicker Script', cursive;
 $skin-color:#ec1839;
 $shadow-dark: 0 0 20px rgba(48, 46, 77, 0.15);
+$color2: #fa5b0f;
+$color3: #37b182;
+$color4: #1854b4;
+$color5: #f021b2;
 
+
+
+.style-switcher {
+  z-index: 100;
+  position: fixed;
+  right: 0;
+  top: 60px;
+  padding: 15px;
+  width: 200px;
+  border: 1px solid $bg-black-50;
+  background: $bg-black-100;
+  border-radius: 5px;
+  transition: all 0.3s ease;
+  transform: translateX(100%);
+
+  .s-icon {
+    position: absolute;
+    height: 40px;
+    width: 40px;
+    text-align: center;
+    font-size: 20px;
+    background: $bg-black-100;
+    color: $text-black-900;
+    right: 100%;
+    border: 1px solid $bg-black-100;
+    margin-right: 25px;
+    cursor: pointer;
+    transition: all 0.3s ease;
+    border-radius: 50%;
+
+    i {
+      line-height: 40px; 
+    }
+  }
+
+  .style-switcher-toggler {
+    top: 0;
+  }
+
+  .day-night {
+    top: 55px;
+
+  }
+
+  h4 {
+    margin: 0 0 10px;
+    color: $text-black-700;
+    font-size: 16px;
+    font-weight: 600;
+    text-transform: capitalize;
+  }
+
+  .colors {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+
+    span {
+      display: inline-block;
+      height: 30px;
+      width: 30px;
+      border-radius: 50%;
+    }
+  }
+
+  .color1 {
+    background: $skin-color;
+  }
+
+  .color2 {
+    background: $color2;
+  }
+
+  .color3 {
+    background: $color3;
+  }
+
+  .color4 {
+    background: $color4;
+  }
+
+  .color5 {
+    background: $color5;
+  }
+}
+
+.style-switcher.open {
+  transform: translateX(-25px);
+}
+
+// .color1{
+//   color: $skin-color;
+// }
+
+// .color2 {
+//   color: $color2;
+// }
+
+// .color3{
+//   color: $color3;
+// }
+
+// .color4{
+//   columns: $color4;
+// }
+
+// .color5{
+//   color: $color5;
+// }
 
 // GENERAL STYLING
 * {
@@ -45,9 +159,9 @@ body {
   }
 }
 
-.hidden {
-  display: none !important;
-}
+// .hidden {
+//   display: none !important;
+// }
 
 .btn {
   font-size: 16px;
@@ -460,7 +574,7 @@ body {
 
       .education, .experience {
         flex: 0 0 50%;
-        max-width: 60%;
+        max-width: 50%;
         margin-top: 30px;
 
         h3.title {
@@ -763,7 +877,8 @@ body {
 }
 
 // MEDIA SCREENS
-@media (max-width:1160px){
+@media (max-width:1199px){
+
   .aside {
     left: -270px;
   }
@@ -772,34 +887,53 @@ body {
     padding-left: 0;
   }
 
-  .about {
+  .aboutMe {
     .about-info {
-      .personal-info {
-        .info-item {
-          p {
-            span {
-              display: block;
-              margin-left: 0;
+
+      .row {
+        .personal-info {
+          .info-item {
+            p {
+              span {
+                display: block;
+                margin-left: 0;
+              }
             }
           }
         }
+
       }
     }
   }
 }
 
-@media (max-width: 900px) {
-  .contact .contact-info-item, .portfolio .portfolio-item, .service .service-item {
-    flex: 0 0 50%;
-    max-width: 50%;
-  }
+@media (max-width: 991px) {
+  .main-content{
+    .contact .row .contact-info-item,
+    .portfolio .row .portfolio-item,
+    .services .row .service-item {
+      flex: 0 0 50%;
+      max-width: 50%;
+    }
+  
 
-  .home .home-info {
+    .home .home-info {
     flex: 0 0 100%;
     max-width: 100%;
+    // background-color: red;
   }
 
   .home .home-img {
     display: none;
+  }
+}
+}
+
+@media (max-width: 767px) {
+  .main-content {
+    .contact .contact-form .col-6, .contact .row .contact-info-item, .portfolio .row .portfolio-item, .services .row .service-item, .aboutMe .about-info .row .experience, .aboutMe .about-info .row .education, .aboutMe .about-info .row .skills, .aboutMe .about-info .row .personal-info {
+      flex: 0 0 100%;
+      max-width: 100%;
+    }
   }
 }
