--- a/style.scss
+++ b/style.scss
@@ -84,7 +84,7 @@ $color5: #f021b2;
   }
 
   .color1 {
-    background: var(--skin-color);
+    background: $skin-color;
   }
 
   .color2 {
@@ -108,25 +108,7 @@ $color5: #f021b2;
   transform: translateX(-25px);
 }
 
-// .color1{
-//   color: $skin-color;
-// }
 
-// .color2 {
-//   color: $color2;
-// }
-
-// .color3{
-//   color: $color3;
-// }
-
-// .color4{
-//   columns: $color4;
-// }
-
-// .color5{
-//   color: $color5;
-// }
 
 // GENERAL STYLING
 * {
@@ -176,7 +158,7 @@ body.dark {
   font-size: 16px;
   font-weight: 500;
   padding: 12px 35px;
-  background: var(--skin-color);
+  background: $skin-color;
   border-radius: 40px;
   color: white;
   display: inline-block;
@@ -215,7 +197,7 @@ body.dark {
     content: '';
     height: 4px;
     width: 25px;
-    background-color: var(--skin-color);
+    background-color: $skin-color;
     position: absolute;
     top: 100%;
     left: 0;
